# CasADi_codegen_example

./: CMakeLists.txt  README.md
include/: solveQP.h
lib/: solveQP.c
scripts/: QPcodegen.m
src/: main.cpp
